[package]
name = "xeno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apple-dmg = "0.1.0"
# squashfs-ng = "0.1.2"
tar = "0.4"
lzma-rs = "0.2"
flate2 = "1.0.25"
bzip2 = "0.4.3"
zstd = "0.12.1+zstd.1.5.2"

thiserror = "1.0"