[package]
name = "xeno-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/xmoezzz/xeno"
repository = "https://github.com/xmoezzz/xeno"
description = "Extracting archives and firmwares in rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apple-dmg = "0.2.0"
# squashfs-ng = "0.1.2"
apple-xar = "0.13.0"
cpio_reader = "0.1.1"
cab = "0.4.1"
tar = "0.4"
zip = "0.6.3"
unrar = "0.4.4"
lzma-rs = "0.2"
flate2 = "1.0.25"
bzip2 = "0.4.3"
zstd = "0.12.1+zstd.1.5.2"
sevenz-rust = { version = "0.2.0", features = ["aes256"]}
delharc = "0.4.0"
ext4 = "0.9.0"
backhand = "0.6.0"
ntfs = "0.2.0"

thiserror = "1.0.38"
anyhow = { version = "1.0.68", features = ["backtrace"]}
memmap = "0.7.0"

time = "0.3.17"
log = "0.4.17"
cfg-if = "1.0.0"
